--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "administration",
     "rails"
   ],
-  "author": "David Rodríguez <deivid.rodriguez@riseup.net>",
+  "author": "David Rodrígue <deivid.rodriguez@riseup.net>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/activeadmin/activeadmin/issues"
@@ -32,7 +32,7 @@
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-terser": "^7.0.0"
+    "rollup-plugin-terser": "^7.0"
   },
   "scripts": {
     "gherkin-lint": "ghrkin-lint",
